--- a/src/app/like/like.component.html
+++ b/src/app/like/like.component.html
@@ -1,3 +1,3 @@
 
-<button type="button" (click)="isActive = !isActive;" class="btn btn-sm" [ngClass]="isActive ? 'btn-primary' : 'btn-secondary'">Like</button>
+<button type="button" (click)="LikeChange()" class="btn btn-sm" [ngClass]="isActive ? 'btn-primary' : 'btn-secondary'">Like</button>
 <br>
