--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,15 @@
 </ng-container>
 <ng-template #HomeNavBar>
   <nav
-    class="navbar navbar-dark"
+    class="navbar navbar-dark navbar-expand-sm"
     [ngStyle]="{ 'background-color': navBarColor }"
   >
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/signUp">Sign Up</a>
       </li>
     </ul>
   </nav>
