16-Mar-2019 Basic working with vidly

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="AuthService.isLoggedIn(); else HomeNavBar">
+<!-- <ng-container *ngIf="AuthService.isLoggedIn(); else HomeNavBar">
   <app-main></app-main>
 </ng-container>
 <ng-template #HomeNavBar>
@@ -7,12 +7,12 @@
     [ngStyle]="{ 'background-color': navBarColor }"
   >
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item text-secondary">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-secondary">
         <a class="nav-link" routerLink="/signUp">Sign Up</a>
       </li>
     </ul>
   </nav>
-</ng-template>
+</ng-template> -->
