--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<router-outlet></router-outlet>
+<div *ngIf="authService.isLoggedIn()">
+  <app-main></app-main>
+</div>
+<div [@routeAnimation]="getAnimtionData(routerOutlet)">
+  <router-outlet #routerOutlet="outlet"></router-outlet>
+</div>
