--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,7 +1,13 @@
-form .ng-invalid {
+.ng-invalid:not(form) {
   border-left: 5px solid red;
 }
 
 form .ng-valid {
   border-left: 5px solid greenyellow;
+}
+
+.loginform {
+  box-shadow: 1px 0px 2px 0.5px black;
+  -moz-box-shadow: 1px 0px 2px 0.5px black;
+  -webkit-box-shadow: 1px 0px 2px 0.5px black;
 }
