--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+.sort-chosen{
+    color: #fff;
+    background-color: #c00;
+}
+
+.sort-handle{
+    cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+.sort-ghost{
+
+}
